bugfix: uploading no longer crashes without a visible errors
fixed that the JS sent an invalid save name for autosaves

--- a/scut-ui/src/styles.css
+++ b/scut-ui/src/styles.css
@@ -31,6 +31,16 @@ body {
     text-align: center;
 }
 
+form.container {
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+
+form.container>div {
+    margin-inline-start: 40px;
+}
+
 h1 {
     text-align: center;
 }
